--- a/templates/forms/edit_artist.html
+++ b/templates/forms/edit_artist.html
@@ -26,15 +26,15 @@
     <div class="form-group">
       <label for="genres">Genres</label>
       <small>Ctrl+Click to select multiple</small>
-      {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true, value = artist.genres) }}
+      {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.genres.id, autofocus = true, value = artist.genres) }}
     </div>
     <div class="form-group">
       <label for="genres">Image Link</label>
-      {{ form.image_link(class_ = 'form-control', placeholder=artist.image_link, id=form.state, autofocus = true, value = artist.image_link) }}
+      {{ form.image_link(class_ = 'form-control', placeholder=artist.image_link, id=form.image_link.id, autofocus = true, value = artist.image_link) }}
     </div>
     <div class="form-group">
       <label for="genres">Facebook Link</label>
-      {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true, value = artist.facebook_link) }}
+      {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.facebook_link.id, autofocus = true, value = artist.facebook_link) }}
     </div>
     <input type="submit" value="Edit Artist" class="btn btn-primary btn-lg btn-block">
   </form>
