--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -31,28 +31,32 @@
     <div class="form-group">
       <label for="genres">Genres</label>
       <small>Ctrl+Click to select multiple</small>
-      {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }}
+      {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.genres.id, autofocus =
+      true) }}
     </div>
     <div class="form-group">
       <label for="genres">Image Link</label>
-      {{ form.image_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
+      {{ form.image_link(class_ = 'form-control', placeholder='http://', id=form.image_link.id, autofocus = true) }}
     </div>
     <div class="form-group">
       <label for="genres">Facebook Link</label>
-      {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
+      {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.facebook_link.id, autofocus = true)
+      }}
     </div>
     <div class="form-group">
       <label for="genres">Website</label>
-      {{ form.website(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
-    </div>
-    <div class="form-group">
-      <label for="seeking_description">Seeking Description</label>
-      {{ form.seeking_description(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
+      {{ form.website(class_ = 'form-control', placeholder='http://', id=form.website.id, autofocus = true) }}
     </div>
     <div class="form-group">
       <label for="seeking_talent">Seeking Talent</label>
-      {{ form.seeking_talent(class_ = 'form-control ', id=form.state, autofocus = true) }}
+      {{ form.seeking_talent(class_ = 'checkbox', id=form.seeking_talent.id, autofocus = true) }}
     </div>
+    <div class="form-group">
+      <label for="seeking_description">Seeking Description</label>
+      {{ form.seeking_description(class_ = 'form-control', placeholder='', id=form.seeking_description.id, autofocus =
+      true) }}
+    </div>
+
     <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
   </form>
 </div>
